Export grid data #54 fix - fix for file location

--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -253,7 +253,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-messages.min.js"></script>
 <script src="../../dist/pagination.min.js"></script>
 <script src="../../dist/dataGrid.min.js"></script>
-<script src="../../dist/JSONToCSVConvertor.min.js"></script>
+<script src="../../dist/JSONToCSVConvertor.js"></script>
 <script src="js/demoApp.js"></script>
 </body>
 </html>
