--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -31,7 +31,9 @@
     <div class="margin-bottom-basic">
         <h3>Angular Data Grid sample using out-of-box Bootstrap styling</h3>
         Features enabled: sorting, filtering (using both in-grid and external controls), sync with browser URLs,
-        pagination and items-per-page functionality, plus optional plugin for CSV exports.
+        pagination and items-per-page functionality, <a
+            href="https://angular-data-grid.github.io/dist/JSONToCSVConvertor.js" target="_blank">optional plugin</a>
+        for CSV exports.
         Angular UI Datepicker used for date controls, although you can use any other framework, plugin or styling.
         <a href="https://github.com/angular-data-grid/angular-data-grid.github.io" target="_blank">Project GitHub</a>
     </div>
